fix: dark mode

--- a/styles/layouts/_main-navigation.scss
+++ b/styles/layouts/_main-navigation.scss
@@ -227,6 +227,9 @@
   .navbar-explore {
     .menu-item {
       cursor: pointer;
+      @include ktheme() {
+        color: theme('text-color');
+      }
 
       &.is-active {
         font-weight: bold;
